--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+This is the in track project for Startup Institute.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Users can sign up with different identities, manage their accounts with reservations as well as their restaurants.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+I will keep improving this project and see it as the playgound for new technologies.
